--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   sqflite:
   path:
+  animate_do: ^3.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,9 +62,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/background.png
+    - assets/images/clock.png
+    - assets/images/light-1.png
+    - assets/images/light-2.png
+    - assets/images/pp.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
